--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+3.4.0 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.4.0a1+slc.0 (2025-03-27)
 --------------------------
 
