Preparing release 3.4.0a2+slc1

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,8 +2,8 @@ Changelog
 =========
 
 
-3.4.0a2+slc.1 (unreleased)
---------------------------
+3.4.0a2+slc1 (2025-08-12)
+-------------------------
 
 - Use Path 0.17
   [ale-rt]
