--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+3.4.0a2+slc2 (unreleased)
+-------------------------
+
+- Nothing changed yet.
+
+
 3.4.0a2+slc1 (2025-08-12)
 -------------------------
 
