--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+3.4.0a3+slc1 (unreleased)
+-------------------------
+
+- Nothing changed yet.
+
+
 3.4.0a3+slc0 (2025-08-13)
 -------------------------
 
